@@ -1,6 +1,7 @@
 CVS HEAD:
  * balancing change: reduced cost of dwarvish fighter by 1 gold; made Lieutenant more powerful
  * user interface improvements:
+   * added %-to-kill to Damage Calculations
    * made it so a unit's defense in a terrain is displayed over the terrain when choosing to move the unit
    * added 'Advanced' preferences section with 'binary save files' and 'show combat' as initial options
    * fix editor file chooser when starting directory has many files (#11698)
